--- a/style.css
+++ b/style.css
@@ -57,16 +57,13 @@ main {
   height: 100vh;
   background: hsl(225, 100%, 94%) url('./images/pattern-background-desktop.svg') no-repeat;
 
-  /* padding: 10px; */
   justify-content: center;
   align-items: center;
 }
 
 .card {
-  /* width: 25%; */
   width: 325px;
   min-width: 300px;
-  /* height: 300px; */
   background-color: white;
   border-radius: 17px;
 
@@ -118,8 +115,15 @@ button {
 }
 button:hover {
   background-color: rgb(56, 41, 224, .7);
-
   box-shadow: 0 15px 15px rgb(226, 222, 222);
+}
+
+footer {
+  font-size: 11px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
 }
 
 @media (max-width: 375px) {
